25.2.26 `sticky-sidebar` overlap fix
https://github.com/refined-github/refined-github/issues/8445

--- a/style/25.2.26.css
+++ b/style/25.2.26.css
@@ -3,3 +3,9 @@
 	width: 16px !important;
 	margin-inline: .2em;
 }
+
+
+/* z-index fight https://github.com/refined-github/refined-github/issues/8445 */
+.rgh-sticky-sidebar {
+	z-index: unset !important;
+}
